# CPP_rtype_2019

./: CMakeLists.txt  conanfile.txt  notes
Architecture/: network_notes.txt  rtype_engine.UML.xml  rtype_engine.design.xml
Asset/: Stage_bonus  Stage_compose_asteroid  Stage_compose_bydo_02  Stage_compose_cave_02  Stage_compose_cave_03  Stage_compose_ruins  Stage_compose_ruins_02
AssetCache/include/: AssetCache.hpp  TAsset.hpp
AssetCache/src/: AssetCache.cpp
ECS/include/: ATaskPresenter.hpp  ComponentManager.hpp  EntityPool.hpp  IComponentTable.hpp  ISystem.hpp  Scheduler.hpp  SystemManager.hpp  TAsset.hpp  TComponent.hpp  TComponentTable.hpp  TEvent.hpp  TSystem.hpp  TTask.hpp  TaskNode.hpp
ECS/src/: EntityPool.cpp  Scheduler.cpp  TaskNode.cpp
JSON/include/: CachedJSON.hpp  JSONParser.hpp  JSONValue.hpp
JSON/src/: CachedJSON.cpp  JSONParser.cpp  JSONValue.cpp
TCP/include/: Client.hpp  Protocol.hpp  Server.hpp  TConnection.hpp  TICallbackHandler.hpp  TServer.hpp  TSession.hpp
TCP/src/: Client.cpp  Protocol.Message.cpp  Protocol.cpp  Server.cpp
actors/include/: Controller.hpp  Kinematic.hpp  Speed.hpp
actors/src/: Kinematic.cpp  Manifest.cpp
client/src/: main.cpp
core/include/: Component.hpp  InstanceCalls.hpp  InstanceManager.hpp  TVector2.hpp  Timer.hpp
core/src/: InstanceManager.cpp  Manifest.cpp
docs/: Doxyfile.in
graphical/include/: Animations.hpp  Animator.hpp  Component.hpp  Inputs.hpp  Renderer.hpp
graphical/src/: Animations.cpp  Animator.cpp  Inputs.cpp  Manifest.cpp  Renderer.cpp
include/: ATaskPresenter.hpp  ComponentManager.hpp  Entity.hpp  EventMediator.hpp  IComponent.hpp  IComponentTable.hpp  IListener.hpp  ISystem.hpp  Instance.hpp  Scheduler.hpp  TComponent.hpp  TComponentTable.hpp  TGuarded.hpp  TIndexedType.hpp  TListener.hpp  TLockedRef.hpp  TSystem.hpp  TTask.hpp  TaskNode.hpp  TypeIndexer.hpp
instance/include/: EventMediator.hpp  IListener.hpp  Instance.hpp  Scheduler.hpp  TEvent.hpp  TEventListener.hpp  TListener.hpp  TaskNode.hpp
instance/src/: EventMediator.cpp  Instance.cpp  Scheduler.cpp  empty.cpp
loader/include/: Plugin.hpp  PluginManager.hpp
loader/src/: Plugin.cpp
plugins/include/: Manifest.hpp  Plugin.hpp
plugins/src/: Plugin.cpp  PluginManager.cpp
server/src/: main.cpp
src/: ATaskPresenter.cpp  Entity.cpp  EventMediator.cpp  Instance.cpp  TypeIndexer.cpp  main.cpp
